--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,7 +21,7 @@ jobs:
       - run: docker tag ghcr.io/komed-health/pwgen ghcr.io/komed-health/pwgen:${{ steps.getVersion.outputs.VERSION }}
 
       - name: Login to GitHub Cloud Registry
-        run: echo ${{ secrets.ORG_GITHUB_CONTAINER_REGISTRY_TOKEN }} | docker login ghcr.io -u BorntraegerMarc --password-stdin
+        run: docker login ghcr.io -u BorntraegerMarc -p ${{ secrets.ORG_GITHUB_CONTAINER_REGISTRY_TOKEN }}
 
       - run: docker push ghcr.io/komed-health/pwgen
       - run: docker push ghcr.io/komed-health/pwgen:${{ steps.getVersion.outputs.VERSION }}
